Refactor: Last section of code spotless highlights for refactoring. Build runs successfully now. All tests passing, spotless not complaining.